# OPUS-PRIME-EX

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMUNICATION_PROTOCOL.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  STATUS.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
apps/: __init__.py
apps/web/: __init__.py  index.html  server.py
brain/: BRAIN.md
config/: embeddings.yaml  guardrails.yaml  korpus_quellen.yaml  models.yaml  sources.yaml
data/changelog/: changelog.yaml
data/fixtures/: ingest_manifest.yaml
data/fixtures/de/: markeng_p42.xml  synthetisch_langer_paragraph.xml  ustg_p19.xml
data/fixtures/eu/: ai_act_art6_anhang3.xml  data_act_art5.xml  dsgvo_art28.xml  umv_art46.xml
data/fixtures/raw/: bmf_gobd_sample.txt  eurlex_scc_sample.xml  eurlex_umv_sample.xml  gii_ustg_sample.xml
docs/: INTERFACE_MASTERPLAN.md  ai-act-assessment.md  deploy_cloud_run.md
evals/: __init__.py
evals/golden_set/: data_act.yaml  dsgvo.yaml  eu_ai_act.yaml  finanzen.yaml  gewerberecht.yaml  markenrecht.yaml  steuerrecht.yaml
evals/harness/: __init__.py  harness.py  run.py
prompts/: system_prompt_v1.1.md  system_prompt_v1.2.md
prompts/few_shots/: README.md  dsgvo.md  eu_ai_act.md  steuerrecht.md
review/: coverage_matrix.yaml  gate_report.md  human_signoff_checklist.md  legal_review.md  legal_review_markenrecht_addendum.md  prompt_review.md
scripts/: brain_serve.py  demo.py  ingest.py  mcp_serve.py  seed_brain.py  spec_lint.py
spec/: AGENT_ARCHITECTURE.md  COWORK_HANDOFF_BRIEF.md  FILE_MANIFEST.md  KNOWLEDGE_ARCHITECTURE.md  NEXT_STEPS.md  OPEN_QUESTIONS.md  PROJECT_INSTRUCTIONS.md  SYSTEM_PROMPT_OPUS_PRIME_EX.md  spec_hashes.json
src/: __init__.py
src/brain/: __init__.py  retrieval.py  server.py  store.py
src/gateway/: config.py  gemini_client.py  gemma_client.py  llm_client.py  prompt_builder.py
src/guardrails/: audit.py  events.py  post.py  pre.py
src/mcp_client/: __init__.py  client.py
src/mcp_server/: __init__.py  server.py  tools.py
src/orchestrator/: orchestrator.py
src/rag/: chunker.py  embeddings.py  ingest.py  persistence.py  retrieval.py  store.py  verweisgraph.py
src/rag/sources/: __init__.py  bmf.py  eurlex.py  gii.py
src/router/: classifier.py  router.py
src/shared/: exceptions.py  texts.py
src/shared/i18n/: de.yaml  en.yaml
src/tools/: aenderungs_radar.py  dokument_generator.py  fristen_kalender.py  steuer_rechner.py
src/tools/params/: dokument_templates.yaml  fristen_params.yaml  steuer_params.yaml
tests/brain/: test_brain.py
tests/evals/: test_harness.py
tests/gateway/: test_gateway.py
tests/guardrails/: test_guardrails.py
tests/mcp/: test_mcp.py
tests/mcp_client/: test_mcp_client.py
tests/orchestrator/: test_orchestrator.py
tests/rag/: test_embeddings.py  test_ingest.py  test_ingest_fixtures.py  test_live_ingest.py  test_retrieval.py  test_source_bmf.py  test_source_eurlex.py  test_source_gii.py  test_source_scc.py
tests/router/: test_classifier.py  test_routing.py
tests/tools/: test_aenderungs_radar.py  test_dokument_generator.py  test_fristen_kalender.py  test_steuer_rechner.py
tests/web/: test_server.py
