[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opus-prime-ex"
version = "0.1.0"
description = "OPUS PRIME EX — a spec-driven, guardrailed legal & tax information agent for German/EU law (RAG over live statutes, deterministic tools, Claude models)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "OPUS PRIME EX maintainers" }]
keywords = [
    "legal-tech", "rag", "anthropic", "claude", "ai-agent",
    "german-law", "eu-law", "dsgvo", "gdpr", "compliance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.90",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-PyYAML",
]
# BMF-Schreiben-Adapter (PDF-Extraktion). Optional: der Kern laeuft ohne pypdf,
# nur der Live-Ingest von BMF-PDFs braucht es (src/rag/sources/bmf.py).
bmf = [
    "pypdf>=4.0",
]
# Dense-Embeddings (lokales Modell) fuer das Hybrid-Retrieval. Optional: BM25-only
# laeuft ohne. Aktivierung ueber config/embeddings.yaml (src/rag/embeddings.py).
embeddings = [
    "sentence-transformers>=2.2",
]

[project.urls]
Homepage = "https://github.com/yoyo967/OPUS-PRIME-EX"
Repository = "https://github.com/yoyo967/OPUS-PRIME-EX"
Issues = "https://github.com/yoyo967/OPUS-PRIME-EX/issues"

[project.scripts]
# Bring-your-own-key CLIs (ANTHROPIC_API_KEY via .env oder Umgebung).
opus-prime-ex-serve = "apps.web.server:main"
opus-prime-ex-ingest = "src.rag.ingest:main"

[tool.setuptools.packages.find]
include = ["src*", "apps*", "evals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# no wildcard imports (F403/F401), import order (I), pyupgrade (UP), bugbear (B)
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "apps", "scripts", "evals/harness"]

[[tool.mypy.overrides]]
# sentence-transformers = optionales Extra [embeddings] ohne Type-Stubs, lazy importiert
# in src/rag/embeddings.py. Robust ob installiert oder nicht (kein inline type:ignore,
# das je nach Installationszustand unbenutzt waere).
module = ["sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true
